[tool.poetry]
name = "pygeoboundaries"
version = "0.0.2"
description = "For performing data checks and file validation on geoboundary files. The primary purpose of this package is to facilitate the review process for pull requests made to the geoBoundaries repository."
authors = ["rohith4444 <rohithreddy24242@gmail.com>", "DanRunfola <danr@wm.edu>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/wmgeolab/pyGeoBoundaries"
repository = "https://github.com/wmgeolab/pyGeoBoundaries"
keywords = ["pygeoboundaries","geoboundaries","wmgeolab","metaCheck"]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
